--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
+    "pdf-parse": "^2.1.7",
     "redis": "^4.6.12",
     "sharp": "^0.33.5",
     "socket.io": "^4.8.1",
