chore: update core configuration and dependencies
- Update docker-compose.yml for MinIO and Redis services
- Update package.json with new media processing dependencies
- Update Prisma schema with enhanced content and job models
- Refactor Redis configuration with multiple client instances
- Update storage configuration for MinIO integration
- Update Swagger documentation configuration

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,6 +22,21 @@ services:
       - redis_data:/data
     restart: unless-stopped
 
+  minio:
+    image: minio/minio:latest
+    container_name: minio
+    ports:
+      - "9000:9000"
+      - "9001:9001"
+    volumes:
+      - minio_data:/data
+    environment:
+      - MINIO_ROOT_USER=minioadmin
+      - MINIO_ROOT_PASSWORD=minioadmin123
+    command: server /data --console-address ":9001"
+    restart: unless-stopped
+
 volumes:
   meili_data:
   redis_data:
+  minio_data:
