--- a/package.json
+++ b/package.json
@@ -51,6 +51,8 @@
     "express": "^4.18.2",
     "express-rate-limit": "^7.1.5",
     "express-validator": "^7.0.1",
+    "ffmpeg-static": "^5.2.0",
+    "ffprobe-static": "^3.1.0",
     "fluent-ffmpeg": "^2.1.3",
     "fs-extra": "^11.3.2",
     "handlebars": "^4.7.8",
@@ -71,6 +73,7 @@
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
     "pdf-parse": "^2.1.7",
+    "plyr": "^3.8.3",
     "redis": "^4.6.12",
     "sharp": "^0.33.5",
     "socket.io": "^4.8.1",
